correcting button gravity on mobile

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -32,6 +32,7 @@ header {
       justify-content: center;
       height: 54px;
       width: 54px;
+      padding: 0;
       border: 0;
       background: rgba($gray, 0.75);
       backdrop-filter: blur(10px);
@@ -42,8 +43,7 @@ header {
       cursor: pointer;
       transition: color ease-in-out 0.2s, background-color ease-in-out 0.2s;
 
-      &.active,
-      &:hover {
+      &.active {
         background-color: $primary;
         color: $body-bg;
       }
